--- a/Ventas.Repository/Ventas.Repository.csproj
+++ b/Ventas.Repository/Ventas.Repository.csproj
@@ -2,6 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <ApplicationIcon></ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Ventas.Domain\Ventas.Domain.csproj" />
+    <ProjectReference Include="..\Ventas.IDataProvider\Ventas.IDataProvider.csproj" />
+  </ItemGroup>
 
 </Project>
