Added basic GetTotalSalesCount endpoint. Added basic GetTotalSalesCountFromStore endpoint. Added basic GetItemSalePercentageByStore endpoint.
Added an endpoint to add random sales to database (InsertRandomSales) to do tests //will be removed.

--- a/Ventas.IDataProvider/Ventas.IDataProvider.csproj
+++ b/Ventas.IDataProvider/Ventas.IDataProvider.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Ventas.Domain\Ventas.Domain.csproj" />
+    <ProjectReference Include="..\Ventas.Models\Ventas.Models.csproj" />
   </ItemGroup>
 
 </Project>
