--- a/Ventas.Domain/Ventas.Domain.csproj
+++ b/Ventas.Domain/Ventas.Domain.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Ventas.Models\Ventas.Models.csproj" />
+  </ItemGroup>
+
 </Project>
